# codegen

./: CMakeLists.txt  README.md
cmake/: CodegenFunctions.cmake  Config.cmake.in
examples/config_file/: BuildIt.sh  CMakeLists.txt  Config.h.in  PythonApi.cpp.in  index.json
examples/enum_example/: CMakeLists.txt  enums.cpp  enums.h
examples/gen_getters_setters/: CMakeLists.txt  DataObjects.h.in  ExerciseDataObjects.cpp
include/fr/codegen/: GenerateNanobind.h  LblEmitFunctions.h  LblFilter.h  LblMiniParser.h  data.h  drivers.h  parser.h
src/: GenerateEnumFunctions.cpp  GenerateFunctions.cpp  GeneratePythonApi.cpp  IndexCode.cpp  OstreamOpsFromIndex.cpp
test/: CMakeLists.txt  Data.cpp  ParserSignalTest.cpp  comments.cpp  scope.cpp  templates.cpp
